Fix the styling of the search bar on IE7.

--- a/app/stylesheets/imports/public/_devcms_core_search_pages.sass
+++ b/app/stylesheets/imports/public/_devcms_core_search_pages.sass
@@ -55,7 +55,7 @@
     padding: 0
     font-weight: bold
     color: white
-    background-color: #025E99
+    background-color: #025e99
   #top_search_button
     float: right
   #bottom_search_button
@@ -99,7 +99,7 @@
         width: 468px
         margin-bottom: 10px
         td
-          color: #025E99
+          color: #025e99
           &.relevance
             .relevance_wrapper
               height: 15px
@@ -128,21 +128,23 @@
           width: 80px
         td
           .container
-            position: absolute
-            left: 0
-            top: 4px
-            width: 100px
-            height: 6px
+            position:         absolute
+            left:             0
+            top:              4px
+            width:            100px
+            height:           6px
             background-color: white
-            border: 1px solid #9f9f9f
-            float: left
+            border:           1px solid #9f9f9f
+            float:            left
           &.type
-            width: 165px
+            width:            165px
           .container .bar
-            height: 6px
-            line-height: 6px
+            height:           6px
+            line-height:      6px
+            font-size:        6px
             img
-              height: 6px
+              height:         6px
+
   border-bottom: 0 !important
   h2
     float: left
